# hacktoberfest-2023

./: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  README.md  env.yaml  filename.pkl  local.yml  pipeline.yaml  pipeline_old.yaml  pyproject.toml  requirements.txt
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
_src_legacy/etl/: wrangling.ipynb
_src_legacy/tests/: conftest.py
_src_old/: db.py  handlers.py  kaggle.py  settings.py
_src_old/products/: 01-extract-pipeline.ipynb  02-cleanup.ipynb  03-eda.ipynb  04-transform.ipynb  05-split.ipynb  06-linear_regression.ipynb
_src_old/scripts/: 02-cleanup.py  03-eda.py  04-transform.py  05-split.py
house_pricing/: House Price Prediction.ipynb  env.h2.yaml  env.yaml  pipeline.h2.yaml  pipeline.yaml
house_pricing/data/: regression_model.pickle
house_pricing/products/: 01-extract-pipeline.ipynb  02-cleanup.ipynb  03-eda.ipynb  04-transform.ipynb  05-linear_regression.ipynb
house_pricing/scripts/: s01_get.py  s02_cleanup.py  s04_transform.py  s05_regressions.py
kaggle/: 01-get.py  02-cleanup.py  03-eda.py  04-transform.py  06-linear_regressions.py  California House Prices.ipynb  India House Pricing.ipynb  Wrangling House Price data.ipynb  dev_test.py  get.py  settings.py  terminal_commands.py
kaggle/products/: 01-extract-pipeline.ipynb  02-cleanup.ipynb  03-eda.ipynb  04-transform.ipynb  04_transform.ipynb  05-split.ipynb  05_linear_regression.ipynb  eda.ipynb  (+5 more)
src/: House Price Prediction.ipynb  India House Pricing.ipynb  db.py  handlers.py  kaggle.py  settings.py  terminal_commands.py
(+18 files in other folders)
